# soulvan-music

./: =0.10.0  =1.0.0  Dockerfile  README.md  archive.json  challenge.json  dashboard.json  fx_pack.json  guild_boost.json  package-lock.json  profile.json  pyproject.toml  requirements.txt  skyfire_crystal_delivery.json  skyfire_drop_trigger.json  soulvan_votes.json  test_beat.json  timeline.json
.devcontainer/: devcontainer.json
chronicles/: contributor_ripple_chronicle.json  skyfire_contributor_legend.json
dna/: skyfire_mutation.json
fx/: trap_award_pack.json
guilds/: skyfire_prestige_update.json
leaderboards/: skyfire_update.json
lore/: skyfire_expansion.json  skyfire_lore_unlocked.json
missions/: skyfire_crystal_tracker.json
nexus/: global_prestige_chronicle.json
skyfire_pack/: starter_mission_Skyfire.json
soulmusic-cli/: README.md  package-lock.json  package.json  tsconfig.json
soulmusic-cli-1/: README.md  package.json
soulmusic-cli-1/configs/: audio.config.json
soulmusic-cli-1/scripts/: setup.sh
soulmusic-cli/challenges/: skyfire_vs_shadowrift.json
soulmusic-cli/dao-votes/: 1762801362402_0xABC123.json
soulmusic-cli/identities/: 0xABC123.dna.json
soulmusic-cli/profiles/: skyfire_newcomer.json
soulmusic_cli/: # Code Citations.md  __init__.py  cli.py  commands.py
soulvanmusic-studio/: .eslintrc.json  README.md  package.json
strategy/: skyfire_arena_plan.json
test_pack/: fx_Skyfire.json  mentor_tips_0xNEW.txt  starter_mission_Skyfire.json
tests/: test_commands.py
tools/: split_wav.py
votes/: skyfire_vote_record.json
(+71 files in other folders)
